Fixing image not showing properly issue

--- a/css/style.css
+++ b/css/style.css
@@ -5,5 +5,7 @@
 }
 
 .header {
-    position: center;
+    background-image: "images/front_animation_1.png" alt="front_page";
+    position: relative;
+
 }
